--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,25 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Control de Luces
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+<ion-content [fullscreen]="true" class="content">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" *ngFor="let espacio of espacios">
+        <ion-card class="card" (click)="toggleLight(espacio)">
+          <ion-card-header class="card-header">
+            {{ espacio.nombre }}
+          </ion-card-header>
+          <ion-card-content class="card-content">
+            <ion-icon [name]="espacio.estado ? 'bulb' : 'bulb-outline'" color="{{ espacio.estado ? 'warning' : 'medium' }}" class="icon"></ion-icon>
+            <span class="status">{{ espacio.estado ? 'Encendido' : 'Apagado' }}</span>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
